# Pamaxie.Scan_API

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: codeql.yml  docker-publish.yml
Pamaxie.Api/: Cargo.toml
Pamaxie.Api/src/: main.rs
Pamaxie.Api/src/Helper/: WebHelper.rs  mod.rs
Pamaxie.Api/src/helper/: mod.rs  web_helper.rs
Pamaxie.Api/src/services/: file_recognition_service.rs
src/: main.rs
src/helper/: data_helpers.rs  database_helper.rs  db_api_helper.rs  kafka_helpers.rs  misc.rs  s3_helpers.rs  sqs_helpers.rs  web_helper.rs
src/services/: file_recognition_service.rs  mod.rs  worker_service.rs
