[package]
name = "pamaxie_scan_api"
version = "0.2.3"
authors = ["pamaxie <development@pamaxie.com>"]
edition = "2021"

[[bin]]
name = "pamaxie_scan_api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde_json = {version = "1.0"}
serde = {version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.18.4", features = ["full"] } # for our async runtime
actix-web = "4"
jwt = "0.16.0"
infer = "0.7.0" # for file type detection
futures = "0.3" # for our async / await blocks
base64 = "0.9.3"
rust-s3 = "0.30.0"
lazy_static = "1.4.0"
kafka = "0.9.0"
rusqlite = "0.27.0"
aws-sdk-sqs = "0.12.0"
aws-config = "0.12.0"
image = "0.24.2"